# Q4_AI_Learning

./: README.md
01_ai_agents_first/00_swarm/: Readme.md
01_ai_agents_first/01_uv/01_project/explore-uv/: pyproject.toml
01_ai_agents_first/01_uv/uv_project2/: pyproject.toml
01_ai_agents_first/01_uv/uv_project2/src/uv_project2/: main.py
01_ai_agents_first/03_litellm_openai_agent/01_litellm/myproject/: pyproject.toml
01_ai_agents_first/03_litellm_openai_agent/01_litellm/myproject/src/myproject/: main.py
01_ai_agents_first/03_litellm_openai_agent/02_uv_litellm_chainlite/chatbot/: chat_history.json  main.py
01_ai_agents_first/04_hello_agent/async_hello_agent/: main.py  pyproject.toml
01_ai_agents_first/04_hello_agent/sync_hello_agent/: main.py  pyproject.toml
01_ai_agents_first/05_chainlit/helloworld/: pyproject.toml
01_ai_agents_first/06_chainlit-chatbot/: .env  main.py  pyproject.toml
01_ai_agents_first/chainlit_agent/: main.py  pyproject.toml
