[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moiz Ahmed", email = "moizaman905@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.72.1",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
